--- a/audio-player/index.html
+++ b/audio-player/index.html
@@ -36,6 +36,19 @@
             </div>
         </div>
     </main>
+    <footer class="footer">
+        <div class="links">
+            <div class="footer_text_wrapper">
+                <span class="footer_text">2023</span>
+            </div>
+            <a class="link1" href="https://rs.school/js-stage0/">
+                <img class="rs_school" src="img/svg/rs_school_js.svg" alt="rs_school">
+            </a>
+            <a class="link2" href="https://github.com/Semion-hacker">
+                <img class="github" src="img/png/github.png" alt="github">
+            </a>
+        </div>
+    </footer>
 <script src="./scripts/index.js"></script>  
 </body>
 </html>
