feat: added track time

--- a/audio-player/index.html
+++ b/audio-player/index.html
@@ -33,6 +33,10 @@
                         <div class="progress_slider"></div>
                     </div>
                 </div>
+                <div class="time">
+                    <div class="start_time">00:00</div>
+                    <div class="all_time">00:00</div>
+                </div>
             </div>
         </div>
     </main>
