--- a/image-galery/index.html
+++ b/image-galery/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="img/favicon.ico">
+    <title>image-galery</title>
+</head>
+<body>
+    <header class="header">
+        <div class="wrapper">
+            <div class="header_title">
+                <img class="camera" src="" alt="camera">
+                <h1 class="title_text">Unsplash API</h1>
+            </div>
+            <div class="header_search">
 
+            </div>
+        </div>
+    </header>
+    <main class="main">
+
+    </main>
+    <footer class="footer">
+
+    </footer>
+</body>
+</html>
