feat: fix header

--- a/image-galery/index.html
+++ b/image-galery/index.html
@@ -11,11 +11,11 @@
     <header class="header">
         <div class="wrapper">
             <div class="header_title">
-                <img class="camera" src="" alt="camera">
                 <h1 class="title_text">Unsplash API</h1>
             </div>
             <div class="header_search">
-
+                <input class="header_input" id="input" type="search"  placeholder="Search..." autocomplete="off" autofocus="">
+                <button class="header_button" id="button">send</button>
             </div>
         </div>
     </header>
