--- a/image-galery/index.html
+++ b/image-galery/index.html
@@ -20,7 +20,15 @@
         </div>
     </header>
     <main class="main">
-
+        <div class="wrapper_img">
+            <div class="img_div">
+                <img class="image" src="https://images.unsplash.com/photo-1681068894746-52e617aa991b?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=M3w1MDkzNTN8MHwxfHNlYXJjaHw3fHwlRDAlQjIlRDAlQjUlRDElODElRDAlQkQlRDAlQjB8ZW58MHwwfHx8MTY5NjI2ODg0MXww&amp;ixlib=rb-4.0.3&amp;q=80&amp;w=1080" alt="image">
+                <img class="image" src="https://images.unsplash.com/photo-1681068894746-52e617aa991b?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=M3w1MDkzNTN8MHwxfHNlYXJjaHw3fHwlRDAlQjIlRDAlQjUlRDElODElRDAlQkQlRDAlQjB8ZW58MHwwfHx8MTY5NjI2ODg0MXww&amp;ixlib=rb-4.0.3&amp;q=80&amp;w=1080" alt="image">
+                <img class="image" src="https://images.unsplash.com/photo-1681068894746-52e617aa991b?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=M3w1MDkzNTN8MHwxfHNlYXJjaHw3fHwlRDAlQjIlRDAlQjUlRDElODElRDAlQkQlRDAlQjB8ZW58MHwwfHx8MTY5NjI2ODg0MXww&amp;ixlib=rb-4.0.3&amp;q=80&amp;w=1080" alt="image">
+                <img class="image" src="https://images.unsplash.com/photo-1681068894746-52e617aa991b?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=M3w1MDkzNTN8MHwxfHNlYXJjaHw3fHwlRDAlQjIlRDAlQjUlRDElODElRDAlQkQlRDAlQjB8ZW58MHwwfHx8MTY5NjI2ODg0MXww&amp;ixlib=rb-4.0.3&amp;q=80&amp;w=1080" alt="image">
+                <img class="image" src="https://images.unsplash.com/photo-1681068894746-52e617aa991b?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=M3w1MDkzNTN8MHwxfHNlYXJjaHw3fHwlRDAlQjIlRDAlQjUlRDElODElRDAlQkQlRDAlQjB8ZW58MHwwfHx8MTY5NjI2ODg0MXww&amp;ixlib=rb-4.0.3&amp;q=80&amp;w=1080" alt="image">
+            </div>  
+        </div>
     </main>
     <footer class="footer">
 
