--- a/image-galery/index.html
+++ b/image-galery/index.html
@@ -31,7 +31,17 @@
         </div>
     </main>
     <footer class="footer">
-
+        <div class="footer_wrapper">
+            <div class="footer_text_wrapper">
+                <span class="footer_text">2023</span>
+            </div>
+            <a class="link1" href="https://rs.school/js-stage0/">
+                <img class="rs_school" src="img/svg/rs_school_js.svg" alt="rs_school">
+            </a>
+            <a class="link2" href="https://github.com/Semion-hacker">
+                <img class="github" src="img/png/github.png" alt="github">
+            </a>
+        </div>
     </footer>
 </body>
 </html>
