feat: implement search function

--- a/image-galery/index.html
+++ b/image-galery/index.html
@@ -14,20 +14,14 @@
                 <h1 class="title_text">Unsplash API</h1>
             </div>
             <div class="header_search">
-                <input class="header_input" id="input" type="search"  placeholder="Search..." autocomplete="off" autofocus="">
+                <input class="header_input" id="input" type="search" autocomplete="off" autofocus="" placeholder="Enter your request...">
                 <button class="header_button" id="button">send</button>
             </div>
         </div>
     </header>
     <main class="main">
         <div class="wrapper_img">
-            <div class="img_div">
-                <img class="image" src="https://images.unsplash.com/photo-1681068894746-52e617aa991b?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=M3w1MDkzNTN8MHwxfHNlYXJjaHw3fHwlRDAlQjIlRDAlQjUlRDElODElRDAlQkQlRDAlQjB8ZW58MHwwfHx8MTY5NjI2ODg0MXww&amp;ixlib=rb-4.0.3&amp;q=80&amp;w=1080" alt="image">
-                <img class="image" src="https://images.unsplash.com/photo-1681068894746-52e617aa991b?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=M3w1MDkzNTN8MHwxfHNlYXJjaHw3fHwlRDAlQjIlRDAlQjUlRDElODElRDAlQkQlRDAlQjB8ZW58MHwwfHx8MTY5NjI2ODg0MXww&amp;ixlib=rb-4.0.3&amp;q=80&amp;w=1080" alt="image">
-                <img class="image" src="https://images.unsplash.com/photo-1681068894746-52e617aa991b?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=M3w1MDkzNTN8MHwxfHNlYXJjaHw3fHwlRDAlQjIlRDAlQjUlRDElODElRDAlQkQlRDAlQjB8ZW58MHwwfHx8MTY5NjI2ODg0MXww&amp;ixlib=rb-4.0.3&amp;q=80&amp;w=1080" alt="image">
-                <img class="image" src="https://images.unsplash.com/photo-1681068894746-52e617aa991b?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=M3w1MDkzNTN8MHwxfHNlYXJjaHw3fHwlRDAlQjIlRDAlQjUlRDElODElRDAlQkQlRDAlQjB8ZW58MHwwfHx8MTY5NjI2ODg0MXww&amp;ixlib=rb-4.0.3&amp;q=80&amp;w=1080" alt="image">
-                <img class="image" src="https://images.unsplash.com/photo-1681068894746-52e617aa991b?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=M3w1MDkzNTN8MHwxfHNlYXJjaHw3fHwlRDAlQjIlRDAlQjUlRDElODElRDAlQkQlRDAlQjB8ZW58MHwwfHx8MTY5NjI2ODg0MXww&amp;ixlib=rb-4.0.3&amp;q=80&amp;w=1080" alt="image">
-            </div>  
+            <div class="img_div"></div>  
         </div>
     </main>
     <footer class="footer">
@@ -43,5 +37,6 @@
             </a>
         </div>
     </footer>
+    <script src="./scripts/index.js"></script>
 </body>
 </html>
