feat: add header

--- a/memory-game/index.html
+++ b/memory-game/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>memory-game</title>
+    <link rel="icon" href="img/favicon.ico">
+</head>
+<body class="body">
+    <img class="sky" src="img/png/sky.png" alt="sky">
+    <header class="header">
+        <span class="header_text">Memory Game</span>
+    </header>
+    <main class="main">
 
+    </main>
+    <footer class="footer">
+
+    </footer>
+</body>
+</html>
